# literate-disco

./: .gitignore  Cargo.toml  README.md  package.json
.github/workflows/: CI.yml  rust.yml
src/: commands.rs  init.rs  lib.rs  main.rs
src/commands/: add.rs  init.rs  install.rs
src/executers/: config.rs  endpoint.rs  repository.rs
src/model/: config.rs  endpoint.rs  repository.rs
src/templates/: endpoint.rs  root.rs
src/utils/: to_camel_case.rs
