[package]
name = "literate-disco"
version = "0.1.0"
authors = ["hrdtbs <harada.tsubasa.0422@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
maplit = "1.0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
